--- a/index.html
+++ b/index.html
@@ -28,6 +28,39 @@ let _
 // неправильные переменные 
 
 
+    
+        // string
+
+        // number
+
+        /*const c = 7 
+
+        c = 9*/
+
+            // примитивное значение нельзя изменить
+
+       // console.log(c)
+
+
+        
+
+
+        let name = prompt("name:");
+ 
+        let address = prompt("adress:")
+
+         let phone =prompt("phone:")
+
+    console.log("Студент," + name + "Адрес," + address + "Номер телефона," + phone);
+
+
+
+    let kurs = 0.0097 
+
+    let rub = 2000
+
+        console.log(19.39)
+
     </script>
 
 </body>
