--- a/index.html
+++ b/index.html
@@ -45,21 +45,24 @@ let _
         
 
 
-        let name = prompt("name:");
+            let name = prompt("name:");
  
-        let address = prompt("adress:")
+            let address = prompt("adress:")
 
-         let phone =prompt("phone:")
+            let phone =prompt("phone:")
 
-    console.log("Студент," + name + "Адрес," + address + "Номер телефона," + phone);
+        console.log("Студент," + name + "Адрес," + address + "Номер телефона," + phone);
 
 
 
-    let kurs = 0.0097 
+            let kurs = 100
 
-    let rub = 2000
+            let rub = 2000
 
-        console.log(19.39)
+            c = rub / kurs
+
+
+            console.log(c)
 
     </script>
 
