--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <script>
 
-let a = 1
+//let a = 1
 
-console.log(a)
+//console.log(a)
 // вывел в консоль
 
-let b 
+//let b 
 
-let _ 
+//let _ 
 // правильные переменные 
 
 // let 1d
@@ -45,7 +45,7 @@ let _
         
 
 
-            let name = prompt("name:");
+           /* let name = prompt("name:");
  
             let address = prompt("adress:")
 
@@ -62,7 +62,45 @@ let _
             c = rub / kurs
 
 
-            console.log(c)
+            console.log(c) */ 
+
+            /*const a = 11
+
+            console.log( a, 'константа не меньше 10')*/
+
+
+            /*let x = 10, y = 7;
+
+            if(x = y){
+                console.log( "x больше, чем y") ;
+            }else{
+                console.log("x не больше, чем y")
+            }*/
+
+
+
+            /*let num = prompt("Введите число")
+
+            if(num % 2 == 0){
+                console.log("Число ${ num} четное")
+            }else{
+                console.log("Число ${num} нечетное")
+            }*/
+
+
+            let one = prompt("one")
+            let two = prompt("two")
+            let three = prompt("three")
+
+            if (one >= two && one >= three) {
+            max = one;
+            } else if (two >= one && two >= three) {
+            max = two;
+            } else{
+            max = three;
+            }
+
+            console.log("Максимальное число: " + max)
 
     </script>
 
