--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
            let text = "Привет, JS"
 
             function chek(text){
-                if(text.includes("lorem")){
+                if(text =="lorem"){
                     console.log("У вас ошибка в тексте")
                 }else{
                 console.log("Содержимое переменной: " + text)
