--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         */
  
 
-        
+        /*
         let man = {
             name: "Ali",
             age: 22,
@@ -167,7 +167,7 @@
             }else{
                 console.log("Указанный пароль" + b, "неверный")
             }
-        
+        */
 
 
 
@@ -190,6 +190,47 @@
             }
         */
 
+
+
+
+        /*
+        let a = ['lorem', 123, true, 'ipsum'];
+
+        console.log(a.length)
+        */
+
+
+
+        /*
+        let a = ['lorem', 123, true, 'ipsum'];
+
+        console.log(a[0], a.at(-1))
+        */
+
+
+
+
+        /*
+        let em = [12, "lorem", 77, true, 10];
+
+        em.unshift("m4", 16, "a4" )
+
+        em.shift()
+
+        em.pop()
+        em.pop()
+
+
+        console.log(em)
+        */
+
+
+
+        let number = [1, 3, 5, 7, 9]
+
+        for(let i=0; i < number.length; i++){
+            console.log(number[i]+ 1 )
+        }
 
 
 
