--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ let a =  [{a: 10, b: 5}, {a: 20, b: 22}, {a: 131, b:55}]
 
 
 
-
+/*
 let a = [ {x: 10, y: "lore"}, {x: 21, y: "lorem"}, {x: -17, y: "lorem"}, {x: 156, y: "lorem"}]
 
 
@@ -346,24 +346,158 @@ let a = [ {x: 10, y: "lore"}, {x: 21, y: "lorem"}, {x: -17, y: "lorem"}, {x: 156
 
 
         console.log(b)
-
+*/
 
 
 //----------------------------------------------------------------------------------
 // Урок 22
 
+/*
+    const cities = [
+        {name: 'Москва', population: 12506468},
+        {name: 'Санкт-Петербург', population: 5351935}, 
+        {name: 'Новосибирск', population: 1612833}, 
+        {name: 'Калиниград', population: 482443},
+        {name: 'Калуга', population: 336726}
+    ]
+*/
 
 
 
 
+    /*
+        cities.unshift({name: 'Медина', population: 1412000})
+
+        cities.push({name: 'Мекка', population: 2386000})
+    */
 
 
 
 
+    /*
+        let citiesPeople = cities.map(obj =>{
+            let {name, population, ...rest} = obj
+
+            return {
+                город: name,
+                население: population,
+                ...rest
+            }
+        })
+    */
+
+
+        
+    /*
+    let citiesPeople = cities.filter(obj => obj.population > 1000000)
+    */
+
+
+/*
+    let citiesPeople = cities.map(citie =>{
+        return{
+            population: citie.population * 1.5
+        }
+    })
+*/
+
+
+
+/*
+    let citiesPeople = cities
+
+    .map(citie => citie.population * 1.5)
+    
+    .reduce((acc,citie) => acc + citie, 0 )
+*/
+
+
+
+/*
+ let a = [
+  {
+    "userId": 1,
+    "id": 1,
+    "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
+    "body": "quia et suscipit\nsuscipit recusandae consequuntur expedita et cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem sunt rem eveniet architecto"
+  },
+  {
+    "userId": 1,
+    "id": 2,
+    "title": "qui est esse",
+    "body": "est rerum tempore vitae\nsequi sint nihil reprehenderit dolor beatae ea dolores neque\nfugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis\nqui aperiam non debitis possimus qui neque nisi nulla"
+  },
+  {
+    "userId": 1,
+    "id": 3,
+    "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
+    "body": "et iusto sed quo iure\nvoluptatem occaecati omnis eligendi aut ad\nvoluptatem doloribus vel accusantium quis pariatur\nmolestiae porro eius odio et labore et velit aut"
+  },
+  {
+    "userId": 1,
+    "id": 4,
+    "title": "eum et est occaecati",
+    "body": "ullam et saepe reiciendis voluptatem adipisci\nsit amet autem assumenda provident rerum culpa\nquis hic commodi nesciunt rem tenetur doloremque ipsam iure\nquis sunt voluptatem rerum illo velit"
+  },
+  {
+    "userId": 1,
+    "id": 5,
+    "title": "nesciunt quas odio",
+    "body": "repudiandae veniam quaerat sunt sed\nalias aut fugiat sit autem sed est\nvoluptatem omnis possimus esse voluptatibus quis\nest aut tenetur dolor neque"
+  },
+  {
+    "userId": 1,
+    "id": 6,
+    "title": "dolorem eum magni eos aperiam quia",
+    "body": "ut aspernatur corporis harum nihil quis provident sequi\nmollitia nobis aliquid molestiae\nperspiciatis et ea nemo ab reprehenderit accusantium quas\nvoluptate dolores velit et doloremque molestiae"
+  },
+  {
+    "userId": 1,
+    "id": 7,
+    "title": "magnam facilis autem",
+    "body": "dolore placeat quibusdam ea quo vitae\nmagni quis enim qui quis quo nemo aut saepe\nquidem repellat excepturi ut quia\nsunt ut sequi eos ea sed quas"
+  },
+  {
+    "userId": 1,
+    "id": 8,
+    "title": "dolorem dolore est ipsam",
+    "body": "dignissimos aperiam dolorem qui eum\nfacilis quibusdam animi sint suscipit qui sint possimus cum\nquaerat magni maiores excepturi\nipsam ut commodi dolor voluptatum modi aut vitae"
+  },
+  {
+    "userId": 1,
+    "id": 9,
+    "title": "nesciunt iure omnis dolorem tempora et accusantium",
+    "body": "consectetur animi nesciunt iure dolore\nenim quia ad\nveniam autem ut quam aut nobis\net est aut quod aut provident voluptas autem voluptas"
+  },
+  {
+    "userId": 1,
+    "id": 10,
+    "title": "optio molestias id quia eum",
+    "body": "quo et expedita modi cum officia vel magni\ndoloribus qui repudiandae\nvero nisi sit\nquos veniam quod sed accusamus veritatis error"
+  },
+
+]
+*/
 
 
 
 
+/*
+  let b = a.filter(obj  => obj.id > 5 )
+
+        console.log(b)
+
+*/ 
+
+
+
+
+let b = a.map(obj =>({
+    title: "Expovision",
+    body: obj.body
+}))
+
+    console.log(b)
 
 
 
