--- a/index.html
+++ b/index.html
@@ -560,7 +560,9 @@ console.log(a(1,34,56,35,97,54))
 */
 
 
+//------------------------------------------------------------------------------------------------------
 
+//Урок 24
 
 
 
